Mantaflow cache doesn't work with non-latin cache directory #72789

Closed
opened 2019-12-30 11:50:24 +01:00 by Michael Soluyanov · 27 comments

System Information
Operating system: Linux-4.15.0-72-generic-x86_64 Ubuntu 18.04 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-27 20:38, hash: c2a37867f2

Short description of error
Mantaflow cache doesn't work with non-latin cache directory

Preview type works. Final and modular - not.

Then pressing bake - writes crash file on each frame, but Blender does not crash:

//cache_fluid/data keeps empty.

mantaflow test.crash.txt

Exact steps for others to reproduce the error
Tested on Object - Quick Effects - Quick smoke on default cube.

**System Information** Operating system: Linux-4.15.0-72-generic-x86_64 Ubuntu 18.04 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-27 20:38, hash: `c2a37867f2` **Short description of error** Mantaflow cache doesn't work with non-latin cache directory Preview type works. Final and modular - not. Then pressing bake - writes crash file on each frame, but Blender does not crash: //cache_fluid/data keeps empty. [mantaflow test.crash.txt](https://archive.blender.org/developer/F8251690/mantaflow_test.crash.txt) **Exact steps for others to reproduce the error** Tested on Object - Quick Effects - Quick smoke on default cube.
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

#75306 was marked as duplicate of this issue

#75306 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I cannot reproduce this with the current development versions of Blender:

Please try the latest daily build: https://builder.blender.org/download/

Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.
If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

I cannot reproduce this with the current development versions of Blender: Please try the latest daily build: https://builder.blender.org/download/ Go to `File → Defaults → Load Factory Settings` and then load your file to see if you still can reproduce this issue. If the problem persists, please give us more clear instructions on how to reproduce it from scratch.
Author
Member

Test file cashe test.blend
2020-01-10 09-57-55.mp4

In #72789#845205, @mano-wii wrote:
I cannot reproduce this with the current development versions of Blender:

Problem appears only on 18.04, in Ubuntu 19.10 have not this issue.

Test file [cashe test.blend](https://archive.blender.org/developer/F8268181/cashe_test.blend) [2020-01-10 09-57-55.mp4](https://archive.blender.org/developer/F8268184/2020-01-10_09-57-55.mp4) > In #72789#845205, @mano-wii wrote: > I cannot reproduce this with the current development versions of Blender: Problem appears only on 18.04, in Ubuntu 19.10 have not this issue.
Author
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Michael Soluyanov self-assigned this 2020-01-10 08:03:48 +01:00
Author
Member

@mano-wii, in this situation, should I change status to "Needs Developer to Reproduce"?

Ops! Accidentally changed the status, can you fix it?

@mano-wii, in this situation, should I change status to "Needs Developer to Reproduce"? Ops! Accidentally changed the status, can you fix it?

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'

Needs another look...

Needs another look...
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Can you provide a simple bullet list with the steps required to reproduce the issue in this file?
Also, it would be nice if you could simplify the file a bit more so that it bakes faster. It should really be as simple as possible. Is it necessary that there are two domains?
I'm not even sure if two domains are fully supported currently.

Can you provide a simple bullet list with the steps required to reproduce the issue in this file? Also, it would be nice if you could simplify the file a bit more so that it bakes faster. It should really be as simple as possible. Is it necessary that there are two domains? I'm not even sure if two domains are fully supported currently.
Author
Member

In #72789#848620, @JacquesLucke wrote:
Can you provide a simple bullet list with the steps required to reproduce the issue in this file?
Also, it would be nice if you could simplify the file a bit more so that it bakes faster. It should really be as simple as possible. Is it necessary that there are two domains?
I'm not even sure if two domains are fully supported currently.

cashe test.blend

  1. Open file
  2. Press bake data
  3. Smoke doesn't appear after baking
> In #72789#848620, @JacquesLucke wrote: > Can you provide a simple bullet list with the steps required to reproduce the issue in this file? > Also, it would be nice if you could simplify the file a bit more so that it bakes faster. It should really be as simple as possible. Is it necessary that there are two domains? > I'm not even sure if two domains are fully supported currently. [cashe test.blend](https://archive.blender.org/developer/F8277850/cashe_test.blend) 1. Open file 2. Press bake data 3. Smoke doesn't appear after baking
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

I don't have the issue, but I'm also on Ubuntu 19.10. Someone else with Ubuntu 18.04 has to try it.

I don't have the issue, but I'm also on Ubuntu 19.10. Someone else with Ubuntu 18.04 has to try it.

Added subscriber: @iss

Added subscriber: @iss

@JacquesLucke If problem appears only on Ubuntu 18.04, what is the chance of this actually being issue in Blender?

@JacquesLucke If problem appears only on Ubuntu 18.04, what is the chance of this actually being issue in Blender?

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Added subscriber: @sebbas

Added subscriber: @sebbas

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Testing on Ubuntu 18.04.3 with build from buildbot (ca7bd3f1c3) and first did not have any problems either. However, when using Cyrillic letters in the cache path (as @crantisz did in the video) I am also not able to bake.

Testing on Ubuntu 18.04.3 with build from buildbot (ca7bd3f1c341) and first did not have any problems either. However, when using Cyrillic letters in the cache path (as @crantisz did in the video) I am also not able to bake.
Author
Member

In #72789#856538, @sebbas wrote:
However, when using Cyrillic letters in the cache path (as @crantisz did in the video) I am also not able to bake.

Yes that is it, non-latin letters in cache directory, confim.

> In #72789#856538, @sebbas wrote: > However, when using Cyrillic letters in the cache path (as @crantisz did in the video) I am also not able to bake. Yes that is it, non-latin letters in cache directory, confim.
Michael Soluyanov changed title from Mantaflow cashe doesn't work to Mantaflow cache doesn't work with non-latin cache directory 2020-01-23 11:30:58 +01:00

This issue was referenced by 39ae4804a8

This issue was referenced by 39ae4804a80fe96472d8f3c269825ec82eeb90f7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This bug was actually unrelated to the OS. It was a UTF / Latin1 conversion issue in Manta itself.

This bug was actually unrelated to the OS. It was a UTF / Latin1 conversion issue in Manta itself.

Added subscriber: @Kristo

Added subscriber: @Kristo
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72789
No description provided.